--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -186,7 +186,6 @@ body{
   flex:1;
   padding:20px;
   min-width:0;
-  z-index: 1;
 }
 .cardish{
   background:#fff; border-radius:var(--radius); box-shadow:var(--shadow); padding:18px;
@@ -201,8 +200,8 @@ body{
   transition:opacity 0.3s ease;
   z-index: 1000;
 }
-.backdrop.show{opacity:1; pointer-events:auto;
-
+.modal-backdrop.show {
+    opacity: 0.20; /* You can change this value from 0.0 to 1.0 */
 }
 
 /* Footer */
